tests/NormalTests/paczka1/fuzzy1/76840994.err
Error in line 2: S321 A264 62,8
Error in line 5: S321 S321 77,5
Error in line 12: Msa5o8 A264 95,5
Error in line 20: cVx A264 81,6
Error in line 33: pde8q3Z1m S321 35,2
Error in line 38: vkXT S321 4
Error in line 39: ,7
